--- a/index.html
+++ b/index.html
@@ -410,8 +410,7 @@
             <img src="images/engineer-img.png" alt="engineer" />
         </div>
         <p id="experience">
-            Learn about my path in the software engineering world, while I continuously grow, currently I'm specializing
-            in Applied Artificial Intelligence and Machine Learning.
+            Currently I'm doing a specialization in Applied Artificial Intelligence and Machine Learning.
         </p>
     </div>
     <div class="colaborations" id="colaborations">
