--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             /* Fixed width for time */
             text-align: left;
             color: #88C0D0;
+            padding: .5rem;
             /* Time color */
         }
 
@@ -277,12 +278,10 @@
         /* Add styles for the project images */
         .project-img {
             min-width: 70px;
-            /* Set a fixed width */
             width: 70%;
             height: auto;
-            /* Maintain aspect ratio */
             border-radius: 5px;
-            /* Optional: add rounded corners */
+            padding: .5rem;
         }
 
         .tech-label {
