--- a/index.html
+++ b/index.html
@@ -496,8 +496,7 @@
                 <div class="experience-details">
                     <strong>Software Engineer</strong> - <i>Siemens</i><br>
                     <small>
-                        • Early-stage development and problem-solving on an internal project, focusing on features such
-                        as categorizing and managing internal departments.
+                        • Early-stage development and problem-solving on an internal project, with the scope of categorizing and managing internal departments.
                     </small>
                     <br>
                     <br>
